--- a/src/commands/refine-analysis-result.yml
+++ b/src/commands/refine-analysis-result.yml
@@ -1,4 +1,4 @@
-description:
+description: Refine analysis result
 parameters:
   analysis-results-path:
     description: "Specify the path to save the analysis results if you need to change it (default: /tmp/dscar/analysis-results)"
