--- a/src/commands/analyze-and-evaluate.yml
+++ b/src/commands/analyze-and-evaluate.yml
@@ -1,9 +1,5 @@
 description: Analyze the code statically and then evaluate the result
 parameters:
-  is-target-branch-base:
-    description: Check-out the BASE branch if true is specified
-    type: boolean
-    default: false
   analyze:
     description: Specify analysis steps
     type: steps
@@ -22,21 +18,10 @@ parameters:
     type: string
     default: ""
 steps:
-  - checkout-analysis-target:
-      is-target-branch-base: << parameters.is-target-branch-base >>
+  - checkout-analysis-target
   - declare-commit-ranges:
       circle_compare_url-path: << parameters.circle_compare_url-path >>
       vcs-api-token: << parameters.vcs-api-token >>
-  - run:
-      name: declare -x DSCAR_ANALYSIS_TARGET
-      command: |
-        set -x
-        declare -x DSCAR_ANALYSIS_TARGET
-        if << parameters.is-target-branch-base >>
-        then DSCAR_ANALYSIS_TARGET=base
-        else DSCAR_ANALYSIS_TARGET=head
-        fi
-        echo "$(declare -p DSCAR_ANALYSIS_TARGET)" >> $BASH_ENV
   - steps: << parameters.analyze >>
   - when:
       condition: << parameters.test-results-path >>
